--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="header_menu_background">
-      <div class="header_menu"><img class="header-logo" src="../img/logo_header_menu.png" alt="MARVEL logo">
+      <div class="header_menu"><img class="header-logo" src="../../src/img/logo_header_menu.png" alt="MARVEL logo">
         <ul class="ul_menu">
           <li> <a href="#">HOME</a></li>
           <li> <a href="#">SERVICE</a></li>
@@ -101,7 +101,7 @@
       </div>
     </div>
     <div class="third_content">
-      <div class="marvel_who_we_are"><img src="../img/logo_who_we_are.png" alt="MARVEL LOGO">
+      <div class="marvel_who_we_are"><img src="../../src/img/logo_who_we_are.png" alt="MARVEL LOGO">
         <h3>Who we are</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer ux adipiscing elit, sed diam nonummy nibh and euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
         <form class="form-main-button">
@@ -195,7 +195,7 @@
         </div>
       </div>
       <div class="fifth_photos_block">
-            <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_1.png" alt="people photo">
+            <div class="container_to_photos_block"><img class="people photo" src="../../src/img/fifth_photos_1.png" alt="people photo">
               <div class="text_hover_to_photos_block">
                 <div class="icons_to_photo_block">
                   <div class="icon_circle"><i class="fas fa-link"></i></div>
@@ -207,7 +207,7 @@
                 </div>
               </div>
             </div>
-            <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_2.png" alt="people photo">
+            <div class="container_to_photos_block"><img class="people photo" src="../../src/img/fifth_photos_2.png" alt="people photo">
               <div class="text_hover_to_photos_block">
                 <div class="icons_to_photo_block">
                   <div class="icon_circle"><i class="fas fa-link"></i></div>
@@ -219,7 +219,7 @@
                 </div>
               </div>
             </div>
-            <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_3.png" alt="people photo">
+            <div class="container_to_photos_block"><img class="people photo" src="../../src/img/fifth_photos_3.png" alt="people photo">
               <div class="text_hover_to_photos_block">
                 <div class="icons_to_photo_block">
                   <div class="icon_circle"><i class="fas fa-link"></i></div>
@@ -231,7 +231,7 @@
                 </div>
               </div>
             </div>
-            <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_4.png" alt="people photo">
+            <div class="container_to_photos_block"><img class="people photo" src="../../src/img/fifth_photos_4.png" alt="people photo">
               <div class="text_hover_to_photos_block">
                 <div class="icons_to_photo_block">
                   <div class="icon_circle"><i class="fas fa-link"></i></div>
@@ -243,7 +243,7 @@
                 </div>
               </div>
             </div>
-            <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_5.png" alt="people photo">
+            <div class="container_to_photos_block"><img class="people photo" src="../../src/img/fifth_photos_5.png" alt="people photo">
               <div class="text_hover_to_photos_block">
                 <div class="icons_to_photo_block">
                   <div class="icon_circle"><i class="fas fa-link"></i></div>
@@ -255,7 +255,7 @@
                 </div>
               </div>
             </div>
-            <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_6.png" alt="people photo">
+            <div class="container_to_photos_block"><img class="people photo" src="../../src/img/fifth_photos_6.png" alt="people photo">
               <div class="text_hover_to_photos_block">
                 <div class="icons_to_photo_block">
                   <div class="icon_circle"><i class="fas fa-link"></i></div>
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </div>
-            <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_7.png" alt="people photo">
+            <div class="container_to_photos_block"><img class="people photo" src="../../src/img/fifth_photos_7.png" alt="people photo">
               <div class="text_hover_to_photos_block">
                 <div class="icons_to_photo_block">
                   <div class="icon_circle"><i class="fas fa-link"></i></div>
@@ -279,7 +279,7 @@
                 </div>
               </div>
             </div>
-            <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_8.png" alt="people photo">
+            <div class="container_to_photos_block"><img class="people photo" src="../../src/img/fifth_photos_8.png" alt="people photo">
               <div class="text_hover_to_photos_block">
                 <div class="icons_to_photo_block">
                   <div class="icon_circle"><i class="fas fa-link"></i></div>
@@ -416,7 +416,7 @@
         <h2>Expert </h2>
         <h4>Meet our Team </h4>
         <div class="expert_content_blocks">
-              <div class="expert_block"><img class="expert_photo" src="../img/expert-first.png" alt="expert photo">
+              <div class="expert_block"><img class="expert_photo" src="../../src/img/expert-first.png" alt="expert photo">
                 <div class="text_about_expert">
                   <h5>Robert Willsom</h5>
                   <hr>
@@ -426,7 +426,7 @@
                   <div class="social_icons"><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin"></i></a><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-skype"></i></a><a href="#"><i class="fab fa-pinterest"></i></a><a href="#"><i class="fab fa-apple"></i></a></div>
                 </div>
               </div>
-              <div class="expert_block"><img class="expert_photo" src="../img/expert-second.png" alt="expert photo">
+              <div class="expert_block"><img class="expert_photo" src="../../src/img/expert-second.png" alt="expert photo">
                 <div class="text_about_expert">
                   <h5>Robert Willsom</h5>
                   <hr>
@@ -436,7 +436,7 @@
                   <div class="social_icons"><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin"></i></a><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-skype"></i></a><a href="#"><i class="fab fa-pinterest"></i></a><a href="#"><i class="fab fa-apple"></i></a></div>
                 </div>
               </div>
-              <div class="expert_block"><img class="expert_photo" src="../img/expert-first.png" alt="expert photo">
+              <div class="expert_block"><img class="expert_photo" src="../../src/img/expert-first.png" alt="expert photo">
                 <div class="text_about_expert">
                   <h5>Robert Willsom</h5>
                   <hr>
@@ -465,7 +465,7 @@
         <h4>Reicent blog post </h4>
       </div>
       <div class="news_photo_block">
-            <div class="similar_news_photo_block"><img class="news_photo" src="../img/news-first.png" alt="news photo">
+            <div class="similar_news_photo_block"><img class="news_photo" src="../../src/img/news-first.png" alt="news photo">
               <div class="hover_photo-news">
                 <div class="left_hover_photo-news">
                   <p>&lt;</p>
@@ -484,7 +484,7 @@
               </div>
               <div class="link_ten_block"><a href="#">READ MORE </a></div>
             </div>
-            <div class="similar_news_photo_block"><img class="news_photo" src="../img/news-second.png" alt="news photo">
+            <div class="similar_news_photo_block"><img class="news_photo" src="../../src/img/news-second.png" alt="news photo">
               <div class="hover_photo-news">
                 <div class="left_hover_photo-news">
                   <p>&lt;</p>
@@ -503,7 +503,7 @@
               </div>
               <div class="link_ten_block"><a href="#">READ MORE </a></div>
             </div>
-            <div class="similar_news_photo_block"><img class="news_photo" src="../img/news-third.png" alt="news photo">
+            <div class="similar_news_photo_block"><img class="news_photo" src="../../src/img/news-third.png" alt="news photo">
               <div class="hover_photo-news">
                 <div class="left_hover_photo-news">
                   <p>&lt;</p>
@@ -522,7 +522,7 @@
               </div>
               <div class="link_ten_block"><a href="#">READ MORE </a></div>
             </div>
-            <div class="similar_news_photo_block"><img class="news_photo" src="../img/news-fourth.png" alt="news photo">
+            <div class="similar_news_photo_block"><img class="news_photo" src="../../src/img/news-fourth.png" alt="news photo">
               <div class="hover_photo-news">
                 <div class="left_hover_photo-news">
                   <p>&lt;</p>
