--- a/Marvel-With-Gulp/src/sass/_contact_page.scss
+++ b/Marvel-With-Gulp/src/sass/_contact_page.scss
@@ -1,5 +1,5 @@
 .eleven_content {
-  background: url(../img/eleven_backgorund.png);
+  background: url(../../src/img/eleven_backgorund.png);
   background-size: cover;
   background-repeat: no-repeat;
   margin-top: 166px;
