--- a/Marvel-With-Gulp/src/sass/_footer.scss
+++ b/Marvel-With-Gulp/src/sass/_footer.scss
@@ -1,5 +1,5 @@
 .footer_map_bacground {
-  background: url(../img/footer-map-backgound.png);
+  background: url(../../src/img/footer-map-backgound.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
