--- a/Marvel-With-Gulp/src/sass/_header.scss
+++ b/Marvel-With-Gulp/src/sass/_header.scss
@@ -1,5 +1,5 @@
 .top_header_background {
-  background: url(../img/top_header_background.png);
+  background: url(../../src/img/top_header_background.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
