--- a/Marvel-With-Gulp/src/sass/_impressed_by_our_work.scss
+++ b/Marvel-With-Gulp/src/sass/_impressed_by_our_work.scss
@@ -1,5 +1,5 @@
 .ninth_content {
-  background: url(../img/nine_backgorund.png);
+  background: url(../../src/img/nine_backgorund.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
