--- a/Marvel-With-Gulp/src/sass/_page_about.scss
+++ b/Marvel-With-Gulp/src/sass/_page_about.scss
@@ -1,5 +1,5 @@
 .first_content {
-  background: url(../img/first_content_background.png);
+  background: url(../../src/img/first_content_background.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
