--- a/Marvel-With-Gulp/src/sass/_pricing_page.scss
+++ b/Marvel-With-Gulp/src/sass/_pricing_page.scss
@@ -1,5 +1,5 @@
 .seventh_content {
-  background: url(../img/seventh_background.png);
+  background: url(../../src/img/seventh_background.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -35,7 +35,7 @@
 }
 
 .price_block:nth-child(1) .top_content_price_block {
-  background: url(../img/services-first.png);
+  background: url(../../src/img/services-first.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -56,13 +56,13 @@
 }
 
 .price_block:nth-child(2) .top_content_price_block {
-  background: url(../img/services-second.png);
+  background: url(../../src/img/services-second.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .price_block:nth-child(3) .top_content_price_block {
-  background: url(../img/services-third.png);
+  background: url(../../src/img/services-third.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
