--- a/Marvel-With-Gulp/src/sass/_responsive_page.scss
+++ b/Marvel-With-Gulp/src/sass/_responsive_page.scss
@@ -1,5 +1,5 @@
 .second_content {
-  background: url(../img/second_content_background.png);
+  background: url(../../src/img/second_content_background.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
