--- a/Marvel-With-Gulp/src/sass/_service_page.scss
+++ b/Marvel-With-Gulp/src/sass/_service_page.scss
@@ -1,5 +1,5 @@
 .sixth_background {
-  background: url(../img/sixth_background.png);
+  background: url(../../src/img/sixth_background.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
