--- a/Marvel-With-Gulp/src/sass/_who_we_are.scss
+++ b/Marvel-With-Gulp/src/sass/_who_we_are.scss
@@ -1,5 +1,5 @@
 .third_content {
-  background: url(../img/third_background_who_we_are.png);
+  background: url(../../src/img/third_background_who_we_are.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
