--- a/Marvel-With-Gulp/src/views/components/header.pug
+++ b/Marvel-With-Gulp/src/views/components/header.pug
@@ -8,7 +8,7 @@ div.header
         +main_button('Contact us')  
 div.header_menu_background
   div.header_menu
-    img(class="header-logo" src="../img/logo_header_menu.png" alt="MARVEL logo")
+    img(class="header-logo" src="../../src/img/logo_header_menu.png" alt="MARVEL logo")
     ul(class="ul_menu")
       li 
         a(href="#") HOME
