--- a/Marvel-With-Gulp/src/views/sections/expert_page.pug
+++ b/Marvel-With-Gulp/src/views/sections/expert_page.pug
@@ -4,6 +4,6 @@ div.eight_content
     h2 Expert 
     h4 Meet our Team 
     div.expert_content_blocks
-      +eight_expert_block('../img/expert-first.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')
-      +eight_expert_block('../img/expert-second.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')
-      +eight_expert_block('../img/expert-first.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')    
+      +eight_expert_block('../../src/img/expert-first.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')
+      +eight_expert_block('../../src/img/expert-second.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')
+      +eight_expert_block('../../src/img/expert-first.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')    
