--- a/Marvel-With-Gulp/src/views/sections/work_page.pug
+++ b/Marvel-With-Gulp/src/views/sections/work_page.pug
@@ -12,11 +12,11 @@ div.fifth_content
         +main_button('Photography')
     
   div.fifth_photos_block
-    +fifth_container_to_photos_block('../img/fifth_photos_1.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
-    +fifth_container_to_photos_block('../img/fifth_photos_2.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
-    +fifth_container_to_photos_block('../img/fifth_photos_3.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
-    +fifth_container_to_photos_block('../img/fifth_photos_4.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
-    +fifth_container_to_photos_block('../img/fifth_photos_5.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
-    +fifth_container_to_photos_block('../img/fifth_photos_6.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
-    +fifth_container_to_photos_block('../img/fifth_photos_7.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
-    +fifth_container_to_photos_block('../img/fifth_photos_8.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
+    +fifth_container_to_photos_block('../../src/img/fifth_photos_1.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
+    +fifth_container_to_photos_block('../../src/img/fifth_photos_2.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
+    +fifth_container_to_photos_block('../../src/img/fifth_photos_3.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
+    +fifth_container_to_photos_block('../../src/img/fifth_photos_4.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
+    +fifth_container_to_photos_block('../../src/img/fifth_photos_5.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
+    +fifth_container_to_photos_block('../../src/img/fifth_photos_6.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
+    +fifth_container_to_photos_block('../../src/img/fifth_photos_7.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
+    +fifth_container_to_photos_block('../../src/img/fifth_photos_8.png', 'fas fa-link', 'fas fa-search', 'Fullwidth Slideshow', ' - Fasion')
