--- a/Marvel-With-Gulp/src/views/sections/news_page.pug
+++ b/Marvel-With-Gulp/src/views/sections/news_page.pug
@@ -4,7 +4,7 @@ div.tenth_content
     h2 News 
     h4 Reicent blog post 
   div.news_photo_block
-    +tenth_similar_news('../img/news-first.png','23 JULY 2015')
-    +tenth_similar_news('../img/news-second.png','23 JULY 2015')
-    +tenth_similar_news('../img/news-third.png','23 JULY 2015')
-    +tenth_similar_news('../img/news-fourth.png','23 JULY 2015')
+    +tenth_similar_news('../../src/img/news-first.png','23 JULY 2015')
+    +tenth_similar_news('../../src/img/news-second.png','23 JULY 2015')
+    +tenth_similar_news('../../src/img/news-third.png','23 JULY 2015')
+    +tenth_similar_news('../../src/img/news-fourth.png','23 JULY 2015')
